<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".view.fragments.RepeatingWeeklyFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/weeklyButtonMon"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        style="@style/repeatWeeklyButtonStyle"
        android:layout_margin="4dp"
        android:text="@string/monday_button" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/weeklyButtonTue"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        style="@style/repeatWeeklyButtonStyle"
        android:layout_margin="4dp"
        android:text="@string/tuesday_button" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/weeklyButtonWen"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        style="@style/repeatWeeklyButtonStyle"
        android:layout_margin="4dp"
        android:text="@string/wednesday_button" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/weeklyButtonThu"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        style="@style/repeatWeeklyButtonStyle"
        android:layout_margin="4dp"
        android:text="@string/thursday_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/weeklyButtonFri"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            style="@style/repeatWeeklyButtonStyle"
            android:layout_margin="4dp"
            android:text="@string/friday_button" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/weeklyButtonSat"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            style="@style/repeatWeeklyButtonStyle"
            android:layout_margin="4dp"
            android:text="@string/saturday_button" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/weeklyButtonSun"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            style="@style/repeatWeeklyButtonStyle"
            android:layout_margin="4dp"
            android:text="@string/sun_button" />

    </LinearLayout>

</LinearLayout>